# django-minify-html

./: .pre-commit-config.yaml  CHANGELOG.rst  HISTORY.rst  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: main.yml
requirements/: compile.py  py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py312-django42.txt  py312-django50.txt  py38-django22.txt  py38-django30.txt  py38-django31.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django22.txt  py39-django30.txt  py39-django31.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt  requirements.in
src/django_minify_html/: __init__.py  apps.py  decorators.py  middleware.py
tests/: settings.py  test_middleware.py  urls.py  views.py
tests/requirements/: py310-django32.txt  py310-django40.txt  py310-django41.txt  py310-django42.txt  py310-django50.txt  py310-django51.txt  py310-django52.txt  py311-django41.txt  py311-django42.txt  py311-django50.txt  py311-django51.txt  py311-django52.txt  py312-django42.txt  py312-django50.txt  py312-django51.txt  py312-django52.txt  py313-django51.txt  py313-django52.txt  py38-django32.txt  py38-django40.txt  py38-django41.txt  py38-django42.txt  py39-django32.txt  py39-django40.txt  py39-django41.txt  py39-django42.txt  requirements.in
